<resources>
    <string name="app_name">Ghostly Contact</string>
    <string name="enter_the_phone_number">Phone Number</string>
    <string name="enter_the_contact_name">Name</string>
    <string name="create_temporary_contact">Save as Temporary</string>
    <string name="create_a_temporary_contact_for_a_limited_time">Create a contact and leave the lazy work of deleting it to us</string>
    <string name="minutes">Choose Time</string>
    <string name="select_time">Auto Delete After:</string>
    <string name="contact_name">Contact Name</string>
    <string name="_91_987654321">+91 987654321</string>
    <string name="permanent_contacts">Save as Permanent</string>
    <string name="view_all_contact">View All Contact</string>
    <string name="_91_enter_phone_number">Enter Phone Number</string>
    <string name="send_whatsapp_message">Send WhatsApp Message</string>
    <string name="send_whatsapp_message_without_saving_phone_number">Send WhatsApp Message without saving phone number</string>
    <string name="add_a_contact">Add a Contact</string>
    <string name="phone_number">Phone Number</string>
    <string name="edit_your_contact">Edit your contact information</string>
    <string name="grant_permission">Please grant permission to choose from call logs.<font fgcolor='#3ccfe0'> Click here.</font></string>
    <string name="contemp_n_create_temporary_contacts">Ghostly Contacts</string>
    <string name="title_activity_view_deleted_contacts">ViewDeletedContactsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

</resources>