<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:padding="10dp"
    tools:context=".WhatsAppMessage">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/send_whatsapp_message_without_saving_phone_number"
        android:textColor="@android:color/holo_blue_bright"
        android:textSize="22sp"
        android:textStyle="italic" />

    <com.hbb20.CountryCodePicker
        android:id="@+id/ccp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginEnd="10dp"
        ads:ccp_autoFormatNumber="true"
        ads:ccp_contentColor="@android:color/white" />

    <EditText
        android:id="@+id/phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/ccp"
        android:background="@drawable/edittext"
        android:hint="@string/_91_enter_phone_number"
        android:inputType="phone"
        android:padding="10dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textSize="16sp" />

    <Button
        android:id="@+id/sendMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView"
        android:layout_centerHorizontal="true"
        android:background="@drawable/button"
        android:padding="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/send_whatsapp_message"
        android:textColor="@android:color/white" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />
</RelativeLayout>