<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="vertical"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="@dimen/_5sdp"
    app:contentPadding="@dimen/_5sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:gravity="center"
            android:lineSpacingExtra="@dimen/_5sdp"
            android:text="Create Ghostly Contact"
            android:textColor="#000"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15sdp"
                android:gravity="center"
                android:text="Name: "
                android:textColor="#000000"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15sdp"
                android:gravity="center"
                android:text="Name"
                android:textColor="#000000"
                android:textSize="@dimen/_11sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15sdp"
                android:gravity="center"
                android:text="Phone Number:"
                android:textColor="#000000"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15sdp"
                android:gravity="center"
                android:text="+9876543210"
                android:textColor="#000000"
                android:textSize="@dimen/_11sdp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/frame"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/minutes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_15sdp"
                android:gravity="center"
                android:text="@string/select_time"
                android:textColor="#000000"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext">

                <Spinner
                    android:id="@+id/time"
                    android:layout_width="@dimen/_110sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:prompt="@string/minutes"
                    android:spinnerMode="dialog"
                    android:textAlignment="center" />
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/permanent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_weight=".5"
                android:background="@drawable/button"
                android:padding="@dimen/_5sdp"
                android:text="@string/permanent_contacts"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_11sdp" />

            <Button
                android:id="@+id/temporary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_weight=".5"
                android:background="@drawable/button"
                android:padding="@dimen/_5sdp"
                android:text="@string/create_temporary_contact"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_11sdp" />
        </LinearLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>